# 02-learn-opengl-traingle

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
include/glad/: glad.h
source/triangle/: CMakeLists.txt  main.c
